Update CmakeLists.txt: 리팩토링 끝, texture.cpp, image.cpp 추가 후 실행 확인

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ set(WINDOW_HEIGHT 1080)
 project(${PROJECT_NAME})
 set(SRC src/main.cpp src/context.cpp src/glload.cpp src/glmath.cpp
 		src/vertexArray.cpp src/buffer.cpp src/shader.cpp src/program.cpp
-		src/image.cpp)
+		src/image.cpp src/texture.cpp)
 
 add_executable(${PROJECT_NAME} ${SRC})
 
